--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "piret-nit",
+  "name": "sih-1678",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.7",
+    "@clerk/themes": "^2.1.25",
+    "axios": "^1.7.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.436.0",
+    "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.11"
-  }
+    "typescript": "5.6.2"
+  },
+  "proxy": "https://api.private-ai.com"
 }
