--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
     "@clerk/themes": "^2.1.25",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
